--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/bootstrap.min.css" media="screen">
+    <script src="/js/controlpanel.js"></script>
     <title>@ViewData["Title"] - ServerControlPanel</title>
 </head>
 <body>
