--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
             <hr>
             ServerControlPanel, developed by Alex "mcmonkey" Goodwin, is a simple web panel to stop/start a server.
             <br>You can find <a href="https://github.com/mcmonkeyprojects/ServerControlPanel">ServerControlPanel on GitHub</a>.
-            <p class="text-muted">ServerControlPanel is Copyright (C) 2019 Alex "mcmonkey" Goodwin, All Rights Reserved.</p>
+            <p class="text-muted">ServerControlPanel is Copyright (C) 2019-2020 Alex "mcmonkey" Goodwin, All Rights Reserved.</p>
         </footer>
     </center>
 </body>
